@@ -50,6 +50,7 @@ Snippet models that inherit from `DraftStateMixin` can now be assigned go-live a
  * Render `help_text` when set on `FieldPanel`, `MultiFieldPanel`, `FieldRowPanel`, and other panel APIs where it previously worked without official support (Matt Westcott)
  * Consolidate usage of Excel libraries to a single library `openpyxl`, removing usage of `XlsxWriter`, `tablib`, `xlrd` and `xlwt` (Jaap Roes)
  * Adopt generic class based views for the create User create view, User edit view, user delete view and Users index listing / search results (Mehrdad Moradizadeh)
+ * Add `button-secondary bicolor` variants to the pattern library and styleguide (Adinapunyo Banerjee)
 
 ### Bug fixes
 
